# ps

./: .gitignore  package-lock.json  package.json
src/: App.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  test-polo.db.wal
src-tauri/src/: defaults.rs  main.rs  taskqueue.rs
src-tauri/src/actions/: controllers.rs  mod.rs
src-tauri/src/actions/apollo/: confirm.rs  mod.rs
src-tauri/src/actions/apollo/check/: index.rs
src-tauri/src/actions/apollo/confirm/: index.rs  types.rs
src-tauri/src/actions/apollo/create/: index.rs
src-tauri/src/actions/apollo/delete/: index.rs
src-tauri/src/actions/apollo/demine/: index.rs
src-tauri/src/actions/apollo/get/: index.rs
src-tauri/src/actions/apollo/lib/: apollo.rs  index.rs  mod.rs  util.rs
src-tauri/src/actions/apollo/login/: index.rs
src-tauri/src/actions/apollo/update/: index.rs
src-tauri/src/libs/: imap.rs  mod.rs  scraper.rs
src-tauri/src/libs/db/: entity.rs  index.rs  mod.rs
src-tauri/src/libs/db/accounts/: index.rs  types.rs
src-tauri/src/libs/db/domain/: types.rs
src-tauri/src/libs/db/metadata/: types.rs
src-tauri/src/libs/db/proxy/: index.rs  types.rs
src-tauri/src/libs/db/records/: types.rs
src-tauri/src/libs/taskqueue/: index.rs  types.rs
