[package]
name = "poll-scrape"
version = "0.0.0"
description = "Ugly Scraper"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
#

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chromiumoxide = { version = "0.5.7", default-features = false, features = [
    "async-std-runtime",
    "_fetcher-rustls-async-std",
] }
futures = "0.3.30"
anyhow = "1.0.81"
uuid = { version = "1.6.1", features = ["v4", "serde", "fast-rng"] }
lazy_static = "1.4.0"
mut_static = "5.0.0"
async-std = "1.12.0"
polodb_core = "4.4.1"
ts-rs = { version = "8.1.0", features = ["uuid-impl"] }
static_init = "1.0.3"
once_cell = "1.19.0"
